some files edited

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1791,6 +1791,22 @@ input, select, textarea {
 				margin: 0 auto;
 				width: auto;
 			}
+			.resume-btn {
+				position: relative;
+				background-color: #8ebebc;
+				position: relative;
+                display: inline-block;
+				border-radius: 0.35em;
+				color: #fff !important;
+				text-decoration: none;
+				border: 0;
+                cursor: pointer;
+				padding: 0.09em 2.5em 0.09em 2.5em;
+				transition: background-color 0.35s ease-in-out;
+			
+				
+				
+			}
 
 /* List */
 
